# artefacts2

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml
artefacts/: cache.py  core.py
dbt_projects/: profiles.yml
tests/: conftest.py  test_core.py  test_manifest.py  test_node.py  test_node_id.py
